--- a/SE_Project/SE_Project.css
+++ b/SE_Project/SE_Project.css
@@ -5,10 +5,11 @@
 
 #head1 {
     color: white;
+    font-size: 100px;
 }
 
 .fade{
-    animation: fadeIn 4s;
+    animation: fadeIn 5s;
 }
 
 @keyframes fadeIn {
@@ -22,7 +23,7 @@
 }
 
 #Sidenav a {
-    position: absolute;
+    position: fixed;
     left: -130px;
     transition: 0.3s;
     padding: 15px;
@@ -41,3 +42,61 @@
     top: 20px;
     background-color: #4CAF50;
 }
+
+#content_table {
+    top: 110px;
+    background-color: aqua;
+}
+
+#about_course {
+    display: block;
+    text-align: center;
+    padding: 300px;
+}
+
+#loader {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    z-index: 1;
+    width: 150px;
+    height: 150px;
+    margin: -75px 0 0 -75px;
+    border: 16px solid #f3f3f3;
+    border-radius: 50%;
+    border-top: 16px solid #3498db;
+    width: 120px;
+    height: 120px;
+    -webkit-animation: spin 2s linear infinite;
+    animation: spin 2s linear infinite;
+  }
+
+  @-webkit-keyframes spin {
+    0% { -webkit-transform: rotate(0deg); }
+    100% { -webkit-transform: rotate(360deg); }
+  }
+
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
+
+  #myBtn {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    z-index: 99;
+    font-size: 18px;
+    border: none;
+    outline: none;
+    background-color: red;
+    color: white;
+    cursor: pointer;
+    padding: 15px;
+    border-radius: 4px;
+  }
+  
+  #myBtn:hover {
+    background-color: #555;
+  }
