--- a/SE_Project/SE_Project.css
+++ b/SE_Project/SE_Project.css
@@ -1,10 +1,17 @@
 #bg1 {
-    background: #61B997;
+    background-image: url(glenn-carstens-peters-203007-unsplash.jpg);
+    background-repeat: no-repeat;
+    position: relative;
+    width: 1142px;
+    height: 900px;
     padding: 20%;
 }
 
 #head1 {
-    color: white;
+    text-align: center;
+    padding-left: 20px;
+    padding-right: 20px;
+    color: black;
     font-size: 100px;
 }
 
@@ -23,15 +30,15 @@
 }
 
 #Sidenav a {
-    position: fixed;
-    left: -130px;
+    position: fixed;    
+    left: -330px;
     transition: 0.3s;
     padding: 15px;
-    width: 180px;
+    width: 380px;
     text-decoration: none;
     font-size: 20px;
     color: white;
-    border-radius: 0 5px 5px 0;
+    border-radius: 0 10px 10px 0;
 }
 
 #Sidenav a:hover {
@@ -90,7 +97,7 @@
     font-size: 18px;
     border: none;
     outline: none;
-    background-color: red;
+    background-color: gray;
     color: white;
     cursor: pointer;
     padding: 15px;
@@ -100,3 +107,7 @@
   #myBtn:hover {
     background-color: #555;
   }
+
+#subjects {
+    text-align: center;
+}
