--- a/SE_Project/SE_Project.css
+++ b/SE_Project/SE_Project.css
@@ -78,17 +78,17 @@
     animation: spin 2s linear infinite;
   }
 
-  @-webkit-keyframes spin {
+@-webkit-keyframes spin {
     0% { -webkit-transform: rotate(0deg); }
     100% { -webkit-transform: rotate(360deg); }
   }
 
-  @keyframes spin {
+@keyframes spin {
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
   }
 
-  #myBtn {
+#myBtn {
     display: none;
     position: fixed;
     bottom: 20px;
@@ -104,10 +104,14 @@
     border-radius: 4px;
   }
   
-  #myBtn:hover {
+#myBtn:hover {
     background-color: #555;
   }
 
 #subjects {
+    text-align: center;
+}
+
+#career {
     text-align: center;
 }
