--- a/SE_Project/SE_Project.css
+++ b/SE_Project/SE_Project.css
@@ -13,6 +13,7 @@
     padding-right: 20px;
     color: black;
     font-size: 100px;
+    font-family: 'Sanchez', serif;
 }
 
 .fade{
@@ -58,17 +59,17 @@
 #about_course {
     display: block;
     text-align: center;
-    padding: 300px;
+    padding: 100px;
 }
-#career_ex{
+#career_ex {
     display: block;
     text-align: center;
-    padding: 300px;
+    padding: 100px;
 }
-#branch_subjects{
+#branch_subjects {
     display: block;
     text-align: center;
-    padding: 300px;
+    padding: 100px;
 }
 
 #loader {
@@ -86,17 +87,17 @@
     height: 120px;
     -webkit-animation: spin 2s linear infinite;
     animation: spin 2s linear infinite;
-  }
+}
 
 @-webkit-keyframes spin {
     0% { -webkit-transform: rotate(0deg); }
     100% { -webkit-transform: rotate(360deg); }
-  }
+}
 
 @keyframes spin {
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
-  }
+}
 
 #myBtn {
     display: none;
@@ -112,16 +113,15 @@
     cursor: pointer;
     padding: 15px;
     border-radius: 4px;
-  }
-  
-#myBtn:hover {
-    background-color: #555;
-  }
-
-#subjects {
-    text-align: center;
 }
 
-#career {
+#myBtn:hover {
+    background-color: #555;
+}
+
+#end_line {
+    background: black;
+    padding: 100px;
+    color: white;
     text-align: center;
 }
