--- a/SE_Project/SE_Project.css
+++ b/SE_Project/SE_Project.css
@@ -134,3 +134,45 @@
     text-align: center;
     padding: 100px;
 }
+
+#branch_interested {
+    text-align: center;
+    padding: 100px;
+}
+
+#different_branch {
+    text-align: center;
+    padding: 100px;
+}
+
+/*fortext fx*/
+.transition {
+	position: relative;
+	overflow: hidden;
+	/*display: inline-block;*/
+	opacity:0;
+	animation: reveal .8s ease forwards;
+}
+
+.transition::before {
+	content: '';
+	display: block;
+	position: absolute;
+	left: 0;
+	background: #000;
+	height: 100%;
+	animation: revealLayer .8s ease forwards;
+	z-index: 1;
+}
+
+@keyframes reveal {
+	0%, 50% {color:rgba(0,0,0,0);}
+	0% {opacity:1;}
+	100% {opacity:1;}
+}
+
+@keyframes revealLayer {
+	0% {width:0; left:0;}
+	50% {width:100%; left:0;}
+	100% {width:0; left:100%;}
+}
