--- a/SE_Project/SE_Project.css
+++ b/SE_Project/SE_Project.css
@@ -29,7 +29,40 @@
         opacity: 1;
     }
 }
+/*test*/
+.fade_dropdown {
+    animation: fadeIn 5s;
+    position: relative;
+    display: inline-block;
+}
 
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    padding: 12px 16px;
+    z-index: 1;
+}
+
+#Sidenav2:hover .dropdown-content {
+    display: block;
+}
+
+#Sidenav2 a {
+    position: fixed;
+    left: -330px;
+    transition: 0.3s;
+    padding: 15px;
+    width: 380px;
+    text-decoration: none;
+    font-size: 20px;
+    color: white;
+    border-radius: 0 10px 10px 0;
+}
+
+/*---------------------------------------------*/
 #Sidenav a {
     position: fixed;    
     left: -330px;
