--- a/SE_Project/SE_Project.css
+++ b/SE_Project/SE_Project.css
@@ -29,7 +29,7 @@
         opacity: 1;
     }
 }
-/*test*/
+/*----- SIDE NAV -----*/
 #sidenav2 a{
     position: fixed;
     left: -330px;
@@ -43,6 +43,23 @@
     animation: fadeIn 5s;
 }
 /*---------------------------------------------*/
+/*---- TABLE -----*/
+table {
+    width: 70%;
+    border-collapse: unset;
+}
+th, td {
+    padding: 15px;
+    text-align: center;
+    border-bottom: 1px solid #ddd;
+}
+#head_table_project{
+    font-size: 20px;
+}
+#head_table_coop{
+    font-size: 20px;
+}
+/*--------------------------------------------*/
 #Sidenav a {
     position: fixed;    
     left: -330px;
