--- a/SE_Project/SE_Project.css
+++ b/SE_Project/SE_Project.css
@@ -42,7 +42,10 @@
     border-radius: 0 10px 10px 0;
     animation: fadeIn 5s;
 }
-/*---------------------------------------------*/
+#img_nav2 {
+    -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+    filter: grayscale(100%);
+}
 /*---- TABLE -----*/
 table {
     width: 70%;
@@ -70,6 +73,7 @@ th, td {
     font-size: 20px;
     color: white;
     border-radius: 0 10px 10px 0;
+    text-align: center;
 }
 
 #Sidenav a:hover {
@@ -83,7 +87,7 @@ th, td {
 
 #content_table {
     top: 110px;
-    background-color: aqua;
+    background-color: antiquewhite;
 }
 
 #about_course {
