--- a/SE_Project/SE_Project.css
+++ b/SE_Project/SE_Project.css
@@ -163,7 +163,7 @@ th, td {
     background: black;
     padding: 100px;
     color: white;
-    text-align: center;
+    text-align: right;
 }
 
 #branch_subjects_table {
