--- a/SE_Project/css/script.css
+++ b/SE_Project/css/script.css
@@ -17,3 +17,17 @@ th, td {
 #head_table_coop{
     font-size: 35px;
 }
+
+#bg1 {
+    background-image: url("pic/glenn-carstens-peters-203007-unsplash.jpg");
+    background-repeat: no-repeat;
+    position: relative;
+    padding: 20%;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
