--- a/SE_Project/css/script.css
+++ b/SE_Project/css/script.css
@@ -5,6 +5,10 @@
     z-index: 1;
 }
 
+.font_size {
+  font-size: 20px;
+}
+
 /*---- TABLE -----*/
 table {
     width: 80%;
@@ -53,6 +57,10 @@ th, td {
   padding-left: 100px;
 }
 
+.pad_left {
+  padding-left: 800px;
+}
+
 .bg_color {
   background: rgb(240, 240, 240);
 }
@@ -78,10 +86,9 @@ th, td {
 }
 
 #bg3 {
-    background-image: url("pic/bg3_2.jpg");
+    background-image: url("pic/anete-lusina-609857-unsplash.jpg");
     position: relative;
-    padding: 100px;
-    background-attachment: fixed;
+    padding: 22%;
     background-position: center;
     background-repeat: no-repeat;
     -webkit-background-size: cover;
